--- a/stylus/assets/css/pages/app-page.styl
+++ b/stylus/assets/css/pages/app-page.styl
@@ -119,6 +119,7 @@
 					min-width 12em
 					padding 0 1em 1em
 					text-align left
+					z-index 1
 
 					h2
 						margin .5em 0
